--- a/src/app/components/nota-venta/nota-venta.component.html
+++ b/src/app/components/nota-venta/nota-venta.component.html
@@ -63,6 +63,10 @@
                     </tr>
                   </tbody>
             </table>
+            <ng-container  *ngIf="( venta  | bNotasVenta:search | bVentaVendedor:vendedor | bVentaFecha:fecha ) as result">
+              <div style="text-align: center;" class="alert alert-danger" *ngIf="result.length === 0">
+                NO SE ENCONTRARON RESULTADOS</div>
+             </ng-container> 
           </div>      
           <pagination-controls 
           (pageChange)="page = $event"
